--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,19 +12,20 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:gravity="center"
+        android:hint="temp"
         android:inputType="number"
         android:maxLength="3"
-        android:hint="temp"
         app:layout_constraintBottom_toTopOf="@+id/bt_setValue"
         app:layout_constraintEnd_toStartOf="@+id/et_humidity"
         app:layout_constraintStart_toStartOf="parent" />
+
     <EditText
         android:id="@+id/et_humidity"
         android:layout_width="100dp"
-        android:hint="humidity"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:gravity="center"
+        android:hint="humidity"
         android:inputType="number"
         android:maxLength="3"
         app:layout_constraintBottom_toTopOf="@+id/bt_setValue"
@@ -34,10 +35,10 @@
     <EditText
         android:id="@+id/et_pressure"
         android:layout_width="100dp"
-        android:hint="pressure"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:gravity="center"
+        android:hint="pressure"
         android:inputType="number"
         android:maxLength="3"
         app:layout_constraintBottom_toTopOf="@+id/bt_setValue"
@@ -56,9 +57,11 @@
 
     <TextView
         android:id="@+id/tv_CurrentConditions"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="CurrentConditions"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
