--- a/p03_decorator_starbuzz/src/main/res/values/colors.xml
+++ b/p03_decorator_starbuzz/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="btn_condiment">#CDDC39</color>
+    <color name="btn_beverage">#8BC34A</color>
 </resources>
